force-app/main/default/objects/Case_Summary_by_Project_Genius_Feedback__c/Case_Summary_by_Project_Genius_Feedback__c.object-meta.xml
<CustomObject>
    <description>CS21-2824: Feedback on Case Summary by Project Genius</description>
    <label>Case Summary by Project Genius Feedback</label>
    <nameField>
        <displayFormat>CSFeedback-{000}</displayFormat>
        <label>Case Summary by Project Genius Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Summary by Project Genius Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>