force-app/main/default/objects/Case_Summary_by_Project_Genius_Feedback__c/fields/Automatically_Generated__c.field-meta.xml
<CustomField>
    <fullName>Automatically_Generated__c</fullName>
    <description>CS21-3252: Capture the value of Autogenerated Value on SupportCaseIntelligence at the the of feedback provided</description>
    <label>Automatically Generated</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>