force-app/main/default/objects/Case_Summary_by_Project_Genius_Feedback__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>CS21-2824: Introduce Feedback Option in Section &quot;Case Summary by Project Genius&quot;</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Summary by Project Genius Feedbacks</relationshipLabel>
    <relationshipName>Case_Summary_by_Project_Genius_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>