force-app/main/default/objects/Case_Summary_by_Project_Genius_Feedback__c/fields/Problem_in_Section__c.field-meta.xml
<CustomField>
    <fullName>Problem_in_Section__c</fullName>
    <description>CS21-2824: Introduce Feedback Option in Section &quot;Case Summary by Project Genius&quot;</description>
    <label>Select A Section</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overview</fullName>
            </value>
            <value>
                <fullName>Issue Reported</fullName>
            </value>
            <value>
                <fullName>Suspected Cause</fullName>
            </value>
            <value>
                <fullName>Current Status</fullName>
            </value>
            <value>
                <fullName>Case Handling</fullName>
            </value>
            <value>
                <fullName>Customer Sentiment</fullName>
            </value>
            <value>
                <fullName>Technical Timeline</fullName>
            </value>
            <value>
                <fullName>Action Plan - Actions Taken</fullName>
            </value>
            <value>
                <fullName>Action Plan - Potential Next Steps</fullName>
            </value>
            <value>
                <fullName>Citations - Similar Cases</fullName>
            </value>
            <value>
                <fullName>Citations - Related Articles</fullName>
            </value>
            <value>
                <fullName>Citations - Similar Jira</fullName>
            </value>
            <value>
                <fullName>Last Updated At</fullName>
                <isActive>false</isActive>
                <label>Last Updated At</label>
            </value>
            <value>
                <fullName>Next Steps</fullName>
                <isActive>false</isActive>
                <label>Next Steps</label>
            </value>
            <value>
                <fullName>Problem Description</fullName>
                <isActive>false</isActive>
                <label>Problem Description</label>
            </value>
            <value>
                <fullName>Related Articles</fullName>
                <isActive>false</isActive>
                <label>Related Articles</label>
            </value>
            <value>
                <fullName>Similar Cases</fullName>
                <isActive>false</isActive>
                <label>Similar Cases</label>
            </value>
            <value>
                <fullName>Suggested Next Steps</fullName>
                <isActive>false</isActive>
                <label>Suggested Next Steps</label>
            </value>
            <value>
                <fullName>Summary</fullName>
                <isActive>false</isActive>
                <label>Summary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>