force-app/main/default/objects/Case_Summary_by_Project_Genius_Feedback__c/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <description>CS21-2824: Introduce Feedback Option in Section &quot;Case Summary by Project Genius&quot;</description>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inaccurate</fullName>
            </value>
            <value>
                <fullName>Not helpful</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>