force-app/main/default/objects/Case_Summary_by_Project_Genius_Feedback__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CS21-2824: Introduce Feedback Option in Section &quot;Case Summary by Project Genius&quot;</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Summary_by_Project_Genius_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>