force-app/main/default/objects/Case_Summary_by_Project_Genius_Feedback__c/fields/Vote_Down__c.field-meta.xml
<CustomField>
    <fullName>Vote_Down__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CS21-2824: Introduce Feedback Option in Section &quot;Case Summary by Project Genius&quot;</description>
    <label>Vote Down</label>
    <type>Checkbox</type>
</CustomField>