force-app/main/default/objects/Case_Summary_by_Project_Genius_Feedback__c/fields/VoteUp_Feedback_comment__c.field-meta.xml
<CustomField>
    <fullName>VoteUp_Feedback_comment__c</fullName>
    <description>CS21-2824: Introduce Feedback Option in Section &quot;Case Summary by Project Genius&quot;</description>
    <label>Feedback comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>